[gd_scene load_steps=9 format=3 uid="uid://dufgx1djtp20j"]

[ext_resource type="Texture2D" uid="uid://d2w4jtsv58b7e" path="res://assets/house assets/InteriorHouse.png" id="1_a0k12"]
[ext_resource type="Script" uid="uid://ble60qqt2wfyo" path="res://scripts/house.gd" id="1_axsfp"]
[ext_resource type="Texture2D" uid="uid://b8gi1qoty0sqc" path="res://assets/house assets/table.png" id="3_upw0o"]
[ext_resource type="Texture2D" uid="uid://8jbjn27ukxlq" path="res://assets/glow.png" id="4_772ft"]
[ext_resource type="PackedScene" uid="uid://bx2kcdo4p4v61" path="res://tile_map.tscn" id="5_v3o71"]
[ext_resource type="Texture2D" uid="uid://cfhmhdy4rdh65" path="res://assets/GoBack.png" id="6_mijie"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_772ft"]

[sub_resource type="TileSet" id="TileSet_4hbto"]
resource_local_to_scene = true
tile_size = Vector2i(48, 75)

[node name="HouseScreen" type="Panel"]
offset_left = -1.0
offset_top = -3.0
offset_right = 639.0
offset_bottom = 357.0
script = ExtResource("1_axsfp")
tween_intensity = 1.2
tween_duration = 1.2

[node name="InteriorHouse" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 139.0
offset_right = 499.0
offset_bottom = 360.0
texture = ExtResource("1_a0k12")

[node name="filler" type="ColorRect" parent="."]
layout_mode = 0
offset_top = 1.0
offset_right = 142.0
offset_bottom = 360.0
color = Color(0, 0, 0, 1)

[node name="filler2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 499.0
offset_top = 1.0
offset_right = 640.0
offset_bottom = 360.0
color = Color(0, 0, 0, 1)

[node name="GlowTable" type="Sprite2D" parent="."]
position = Vector2(307, 219.00002)
scale = Vector2(0.5700001, 0.6499998)
texture = ExtResource("4_772ft")

[node name="table" type="Button" parent="."]
layout_mode = 0
offset_left = 288.0
offset_top = 186.0
offset_right = 328.0
offset_bottom = 242.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_772ft")
icon = ExtResource("3_upw0o")
flat = true

[node name="TileMap" parent="." instance=ExtResource("5_v3o71")]
position = Vector2(31, 27)
tile_set = SubResource("TileSet_4hbto")

[node name="GoBack" type="Button" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 307.0
offset_right = 84.0
offset_bottom = 363.0
icon = ExtResource("6_mijie")
flat = true

[connection signal="pressed" from="table" to="." method="callMemory"]
[connection signal="pressed" from="GoBack" to="." method="callGoBack"]
